--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "jsx": "preserve",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./renderer/*"]
+      "@/*": ["./client/*"]
     }
   },
-  "exclude": ["node_modules", "renderer/next.config.js", "app", "dist"]
+  "exclude": ["node_modules", "client/next.config.js", "app", "dist"]
 }
