--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@react-spring/konva": "^9.3.1",
     "@react-spring/web": "^9.3.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
     "konva": "^8.3.0",
     "react-konva": "^17.0.2-5",
+    "react-redux": "^7.2.6",
     "square": "^16.0.0"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/react": "^16.9.49",
     "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
+    "electron-devtools-installer": "^3.2.0",
     "next": "^11.1.2",
     "nextron": "^7.1.0",
     "react": "^17.0.2",
