--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
+  "name": "Sprinkles",
+  "description": "A monolith of web, iot and other unicorn lab experiments",
   "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "author": "Clay Unicorn <thinkclay@gmail.com>",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
@@ -18,7 +18,6 @@
     "@fontsource/mate-sc": "^4.5.0",
     "@fontsource/material-icons": "^4.5.0",
     "@fontsource/roboto": "^4.5.1",
-    "@microblink/blinkid-in-browser-sdk": "^5.14.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.2.2",
@@ -48,5 +47,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.0-dev.20211126"
+  },
+  "optionalDependencies": {
+    "pi-camera": "^1.6.0",
+    "@microblink/blinkid-in-browser-sdk": "^5.14.2"
   }
 }
